label/input vertical alignment fix

--- a/src/stylus/interest/values.styl
+++ b/src/stylus/interest/values.styl
@@ -37,7 +37,6 @@
 .values__item
   align-items center
   display flex
-  justify-content space-between
   margin 0 0 px_to_rem(16)
 
   @media Breakpoint.SMALL
@@ -59,7 +58,7 @@
 .values__label
   flex 1
   line-height 1
-  margin-left px_to_rem(12)
+  margin-left px_to_rem(8)
   order 2
   white-space nowrap
 
@@ -68,6 +67,7 @@
 
 .values__input
   border-bottom 2px solid var(--input-border)
+  border-top 2px solid transparent
   border-radius 0
   font-size var(--input)
   height px_to_rem(32)
@@ -79,11 +79,11 @@
   width px_to_rem(88)
 
 .values__input:focus
-  border-color var(--green)
+  border-bottom-color var(--green)
   color var(--green)
 
 .values__input:focus:invalid
-  border-color var(--warning)
+  border-bottom-color var(--warning)
   color var(--warning)
 
 .values__input:not(:focus)
